# calendar_automerge

./: .gitignore  Cargo.toml  LICENSE.md
src/: main.rs
