[package]
name = "calendar_automerge"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = { git = "https://github.com/automerge/automerge-rs" }
eframe = "0.18.0"
chrono = "0.4.19"
num-traits = "0.2"
num-integer = "0.1"
